; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame.c_vlc_h2_frame_ping.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame.c_vlc_h2_frame_ping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_frame = type { i32 }

@VLC_H2_FRAME_PING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vlc_h2_frame* @vlc_h2_frame_ping(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vlc_h2_frame*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @VLC_H2_FRAME_PING, align 4
  %5 = call %struct.vlc_h2_frame* @vlc_h2_frame_alloc(i32 %4, i32 0, i32 0, i32 8)
  store %struct.vlc_h2_frame* %5, %struct.vlc_h2_frame** %3, align 8
  %6 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %3, align 8
  %7 = icmp ne %struct.vlc_h2_frame* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i64 @likely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %3, align 8
  %13 = call i32 @vlc_h2_frame_payload(%struct.vlc_h2_frame* %12)
  %14 = call i32 @memcpy(i32 %13, i32* %2, i32 8)
  br label %15

15:                                               ; preds = %11, %1
  %16 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %3, align 8
  ret %struct.vlc_h2_frame* %16
}

declare dso_local %struct.vlc_h2_frame* @vlc_h2_frame_alloc(i32, i32, i32, i32) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @vlc_h2_frame_payload(%struct.vlc_h2_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
